[workspace]
members = [
    ".",
    # "examples/hello-world-mcp",  # TODO: Update to 0.17.0 macro API
]

resolver = "2"

[workspace.package]
rust-version = "1.85"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.22", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System
dirs = "6.0"

# Crypto
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
hex = "0.4"


# CLI dependencies
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"
url = "2.5"

# HTTP/Web
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "auth"] }
hyper = { version = "1.4", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.24" }

# Async utilities
futures = "0.3"
futures-util = "0.3"

[package]
name = "loxone-mcp-rust"
version = "0.7.0"
edition = "2024"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
license = "MIT OR Apache-2.0"
description = "High-performance async Rust library for Loxone home automation systems with MCP server support"
homepage = "https://github.com/avrabe/mcp-loxone"
repository = "https://github.com/avrabe/mcp-loxone"
documentation = "https://docs.rs/loxone-mcp-rust"
readme = "README.md"
keywords = ["loxone", "home-automation", "smart-home", "iot", "mcp"]
categories = ["api-bindings", "embedded", "network-programming", "asynchronous"]
exclude = ["/.github", "/target", "/tests/fixtures", "/integration_tests"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "wasm32-wasip2"]

[badges]
maintenance = { status = "actively-developed" }

[build-dependencies]
chrono = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "loxone-mcp-server"
path = "src/main.rs"

[dependencies]
# MCP Framework (from crates.io) - Upgraded to 0.17.0 with macros support
# Note: cli, cli-derive, monitoring dropped (stuck at 0.14.0, incompatible)
pulseengine-mcp-logging = "0.17.0"
pulseengine-mcp-protocol = { version = "0.17.0", optional = true }
pulseengine-mcp-server = { version = "0.17.0", optional = true }
pulseengine-mcp-transport = { version = "0.17.0", optional = true }
pulseengine-mcp-auth = { version = "0.17.0", optional = true }
pulseengine-mcp-security = { version = "0.17.0", optional = true }
# Macros crate for simplified tool/resource definitions
pulseengine-mcp-macros = { version = "0.17.0", optional = true }

# Async runtime
tokio = { version = "1.50", features = ["rt-multi-thread", "rt", "io-util", "sync", "macros", "time", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Infisical SDK support (via HTTP API)
serde_qs = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "std", "fmt", "json"] }
tracing-appender = "0.2"

# Async traits
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUID support
uuid = { version = "1.22", features = ["v4", "serde"] }

# Hex encoding for request IDs
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# InfluxDB client for time series data
influxdb2 = { version = "0.5", optional = true }
influxdb2-derive = { version = "0.1", optional = true }

# Configuration
config = "0.15"

# Crypto dependencies (OpenSSL only)
openssl = { version = "0.10", features = ["vendored"], optional = true }
aes = { version = "0.8", optional = true }
rand = { version = "0.9" }
sha2 = "0.10"
x509-parser = { version = "0.16", optional = true }
hostname = "0.4"

# WebSocket (conditional for WASM compatibility)
tokio-tungstenite = { version = "0.24", optional = true, features = ["rustls-tls-webpki-roots"] }

# URL parsing
url = { version = "2.5", features = ["serde"] }
urlencoding = "2.1"
md5 = "0.7"

# Backtrace for error handling (debug builds only)
backtrace = "0.3"

# Base64 encoding
base64 = "0.22"

# Futures utilities
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"

# Tokio utilities
tokio-util = "0.7"

# Regular expressions for input validation
regex = "1.12"

# Time serialization
humantime-serde = "1.1"

# Schema generation
schemars = "0.8"

# System information for resource monitoring
sysinfo = "0.33"

# HTTP server for MCP SSE transport (native only)
axum = { version = "0.7", features = ["ws"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "auth"], optional = true }

# Command line argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Password input
rpassword = "7.0"

# Network discovery
mdns-sd = { version = "0.13", optional = true }

# Compression for cold storage
flate2 = "1.1"
zstd = "0.13"
lz4 = "1.28"

# Time-series data handling
tempfile = { version = "3.26" }
toml = "0.8.23"

# Turso database support
libsql = { version = "0.9", optional = true }
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"], optional = true }

# Additional native dependencies
socket2 = { version = "0.5", optional = true }
dirs = "6.0"

[features]
default = ["crypto-openssl", "websocket", "infisical", "discovery", "http-server", "influxdb", "framework-migration", "turso"]

# Framework features (now default) - using 0.17.0 crates with macros
framework-migration = [
    "pulseengine-mcp-protocol",
    "pulseengine-mcp-server",
    "pulseengine-mcp-transport",
    "pulseengine-mcp-auth",
    "pulseengine-mcp-security",
    "pulseengine-mcp-macros",
    "http-server",
    "websocket"
]

# Crypto features
crypto-openssl = ["openssl", "aes", "x509-parser"]
websocket = ["tokio-tungstenite"]
infisical = []
discovery = ["socket2", "mdns-sd"]
mdns = ["mdns-sd"]
http-server = ["axum", "tower", "tower-http"]
influxdb = ["influxdb2", "influxdb2-derive"]
turso = ["libsql", "sqlx"]
wasm = []
test-utils = []

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = "s"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.26"
futures = "0.3"

# Async test isolation
serial_test = "3.4"
temp-env = "0.3"

# HTTP API mocking
wiremock = "0.6"
httpmock = "0.7"

# General mocking
mockall = "0.13"

# Containers & external services
testcontainers = "0.23"
testcontainers-modules = "0.11"

# Test utilities
rstest = "0.23"
serde_json = "1.0"
pretty_assertions = "1.4"
